Add TF actions Move TF state to azure storage with OIDC Set OIDC at job level

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,8 @@
             "extensions": [
                 "GitHub.copilot",
                 "Github.copilot-chat",
-                "HashiCorp.terraform"
+                "HashiCorp.terraform",
+                "GitHub.vscode-github-actions"
             ]
         }
     },
