Set file paths to ignore for CI

--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -4,7 +4,13 @@ name: 'Terraform'
 on:
   push:
     branches: [ "main" ]
+    paths-ignore:
+      - '**.md'
+      - '.devcontainer/**'
   pull_request:
+    paths-ignore:
+      - '**.md'
+      - '.devcontainer/**'
 
 permissions:
   contents: read
