--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -79,12 +79,12 @@ jobs:
           const output = `#### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
           #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
       
-          Show Plan
+          <details><summary>Show Plan</summary>
           
           \`\`\`${process.env.PLAN}\`\`\`
           
           
-          
+          </details>
           *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Workflow: \`${{ github.workflow }}\`*`;
             
           github.rest.issues.createComment({
