--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -96,7 +96,7 @@ jobs:
           <details><summary>Show Plan</summary>
           
           \`\`\`
-          redactedPlan
+          ` + redactedPlan + `
           \`\`\`
           
           
