--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -72,7 +72,7 @@ jobs:
       if: github.event_name == 'pull_request'
       uses: actions/github-script@v7
       env:
-        PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+        PLAN: "${{ steps.plan.outputs.stdout }}"
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
@@ -93,9 +93,9 @@ jobs:
           const output = `#### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
           #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
 
-          <details><summary>Show Plan</summary>
+          <details><summary>Show Plan Output</summary>
           
-          \`\`\`
+          \`\`\`\n
           ` + redactedPlan + `
           \`\`\`
           
