--- a/.github/workflows/terraform-audit.yml
+++ b/.github/workflows/terraform-audit.yml
@@ -35,6 +35,7 @@ jobs:
       uses: hashicorp/setup-terraform@v3
       with:
         terraform_wrapper: false
+        terraform_version: "1.10.5"
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
